syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-auth/api/proto/v1";

message SignOutRequest {
  string refreshToken = 1;
}

message SignOutResponse {
  string message = 1;
}
